Issue #SB-7813 fix: Alignment issue fixed

--- a/org.ekstep.keyboard-1.1/renderer/style/style.css
+++ b/org.ekstep.keyboard-1.1/renderer/style/style.css
@@ -62,7 +62,7 @@
   z-index: 10;
   padding: 5px 5px 0px 5px;
   background-color: #65a0e6;
-  top: 59%;
+  top: 58%;
 }
 
 #parentDivNumericKeyboard {
@@ -92,13 +92,13 @@
   text-align: center;
   flex-grow: inherit;
   min-width: 7%; 
-    background: #ffffff;
-    border-radius: 6px;
-    margin-bottom: 5px;
-    margin-right: 3px;
-    width: auto;
-    padding: 5px 6px;
-    cursor: pointer;
+  background: #ffffff;
+  border-radius: 6px;
+  margin-bottom: 6px;
+  margin-right: 3px;
+  width: auto;
+  padding: 5px 6px;
+  cursor: pointer;
 }
 .key_barakhadi:hover,
 .key_barakhadi_numeric:hover {
@@ -129,6 +129,7 @@
 #firstRowAlpha {
   width: 100%;
   /* height: auto; */
+  top: 4%;
   position: relative;
   display: flex;
   flex-wrap: wrap;    
@@ -139,10 +140,11 @@
 }
 
 #thirdRowAlpha {
+  height: 17%;
   width: 80%;
   left: 0px;
   right: 0px;
-  top: 89%;
+  top: 85%;
   position: fixed;
   display: flex;
   flex-wrap: wrap;
